--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+/* GLOBAL */
 :root {
   --bg-body: hsl(0, 0%, 8%);
   --bg-contact: hsl(0, 0%, 14%);
@@ -15,6 +16,8 @@
   --fs-18: 1.125rem;
 
   --container: 69.375rem;
+
+  --transition: 250ms ease-in-out;
 }
 
 html {
@@ -37,6 +40,23 @@ body {
   line-height: 1.56;
 }
 
+a {
+  transition: var(--transition);
+}
+
+a:hover {
+  color: var(--accent);
+}
+
+.visuallyhidden {
+  position: absolute;
+  left: -10000px;
+  top: auto;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+}
+
 .wrapper {
   width: calc(100% - 2rem); /*1 rem for each side - 16px margin*/
   max-width: var(--container);
@@ -50,4 +70,53 @@ body {
   }
 }
 
-/* 40:14 */
+/* HEADER */
+.header {
+  margin-top: 20px;
+}
+
+.header__nav {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  text-align: center;
+  gap: 20px 25px;
+}
+
+.header__home {
+  font-size: 1.5rem;
+  font-size: clamp(1.5rem, 1.02rem + 2.04vw, 2rem);
+  line-height: 1;
+  color: var(--text1);
+  text-decoration: none;
+  flex: 1 0 100%;
+}
+
+.header__social svg {
+  display: block;
+}
+
+.header__social svg > path {
+  transition: fill var(--transition);
+}
+
+.header__social:hover > svg > path {
+  fill: var(--accent);
+}
+
+/* 600px */
+@media (min-width: 37.5em) {
+  .header__nav {
+    justify-content: flex-start;
+    align-items: center;
+    text-align: left;
+    gap: 32px;
+  }
+
+  .header__home {
+    flex: 1;
+    margin-inline-end: auto;
+  }
+}
+
+/* NEXT: video 2 */
